tests/ui/unexpected-arg.stderr
error: unexpected input
 --> $DIR/unexpected-arg.rs:3:1
  |
3 | #[proc_macro_hack(fake_call_site)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
